force-app/main/default/objects/hed__Program_Plan__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <description>Describes the delivery of the program e.g. Online</description>
    <label>Delivery</label>
    <type>TextArea</type>
</CustomField>