force-app/main/default/objects/hed__Program_Plan__c/fields/Implementation_Of__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The plan that this plan implements (is a copy of) but on a different timeline.</description>
    <inlineHelpText>The plan that this plan implements (is a copy of) but on a different timeline.</inlineHelpText>
    <label>Implementation Of</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Alternate Course Timeline</relationshipLabel>
    <relationshipName>Alternate_Implementations</relationshipName>
    <type>Lookup</type>
</CustomField>