force-app/main/default/objects/hed__Program_Plan__c/fields/Is_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Is_Concentration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this plan represents a concentration plan of the program.</description>
    <inlineHelpText>If true, this plan represents a concentration plan of the program.</inlineHelpText>
    <label>Is Concentration</label>
    <type>Checkbox</type>
</CustomField>