force-app/main/default/objects/hed__Program_Plan__c/fields/Is_Standard_Tuition__c.field-meta.xml
<CustomField>
    <fullName>Is_Standard_Tuition__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, apply standard tuition supplemental text like the &quot;Learn More&quot; links.</description>
    <inlineHelpText>If true, apply standard tuition supplemental text like the &quot;Learn More&quot; links.</inlineHelpText>
    <label>Is Standard Tuition</label>
    <type>Checkbox</type>
</CustomField>