force-app/main/default/objects/hed__Program_Plan__c/fields/Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Time_Frame__c</fullName>
    <description>Example time frame e.g. 1-2 Years</description>
    <inlineHelpText>Example time frame e.g. 1-2 Years</inlineHelpText>
    <label>Time Frame</label>
    <length>255</length>
    <type>Text</type>
</CustomField>