force-app/main/default/objects/hed__Program_Plan__c/fields/Tuition__c.field-meta.xml
<CustomField>
    <fullName>Tuition__c</fullName>
    <description>e.g. $500 per Credit</description>
    <inlineHelpText>e.g. $500 per Credit</inlineHelpText>
    <label>Tuition</label>
    <type>TextArea</type>
</CustomField>